# majority-multisign

./: STANDARDS.md  cabal-haskell.nix.project  cabal.project  draft-utxo-spec.md  flake.nix  hie.yaml  shell.nix  update-sha256map.sh
.github/: format.sh
.github/workflows/: integrate.yaml
majority-multisign/: CHANGELOG.md  Makefile  default.nix  majority-multisign.cabal
majority-multisign/golden/data/: MajorityMultiSign-Schema-MajorityMultiSignDatum.json  MajorityMultiSign-Schema-MajorityMultiSignIdentifier.json  MajorityMultiSign-Schema-MajorityMultiSignRedeemer.json  MajorityMultiSign-Schema-SetSignaturesParams.json
majority-multisign/golden/json/: MajorityMultiSign-Schema-MajorityMultiSignDatum.json  MajorityMultiSign-Schema-MajorityMultiSignIdentifier.json  MajorityMultiSign-Schema-SetSignaturesParams.json
majority-multisign/golden/to-schema/: MajorityMultiSign-Schema-MajorityMultiSignIdentifier.json
majority-multisign/src/: MajorityMultiSign.hs
majority-multisign/src/MajorityMultiSign/: Contracts.hs  Initialize.hs  OnChain.hs  Schema.hs
majority-multisign/test/: Spec.hs
majority-multisign/test/Spec/: ContractExtra.hs  Direct.hs  Golden.hs  Instances  Instances.hs  Integration.hs  IntegrationWrappers.hs  Roundtrip.hs  SetSignature.hs
nix/: ci.nix  default.nix  haskell.nix  sources.json  update.nix
