cabal-version:      3.0
name:               majority-multisign
version:            1.0
extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:
    , base                     ^>=4.14
    , record-dot-preprocessor  ^>=0.2.11
    , record-hasfield          ^>=1.0

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fobject-code -fno-strictness
    -fplugin=RecordDotPreprocessor
    
  if (defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  default-language:   Haskell2010

library
  import:          lang
  exposed-modules:
    MajorityMultiSign
    MajorityMultiSign.Contracts
    MajorityMultiSign.OnChain
    MajorityMultiSign.Schema

  build-depends:
    , aeson              ^>=1.5.6.0
    , cardano-prelude
    , containers
    , extra
    , freer-simple       ^>=1.2.1.1
    , lens               ^>=4.19.2
    , openapi3           <3.2
    , playground-common
    , plutus-collection  >=1.0 && <2.2
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-numeric
    , plutus-pab
    , plutus-pretty
    , plutus-tx
    , plutus-tx-plugin
    , plutus-use-cases
    , prettyprinter      ^>=1.7.0
    , recursion-schemes  >=5 && <6
    , row-types          ^>=1.0.1.0
    , text

  hs-source-dirs:  src

test-suite majority-multisign-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:  Spec.Direct
                  Spec.Golden
                  Spec.Instances
                  Spec.Integration
                  Spec.IntegrationWrappers
                  Spec.Roundtrip
  build-depends:
    , bytestring
    , containers
    , data-default
    , generic-arbitrary   ==0.2.*
    , lens
    , majority-multisign
    , plutus-collection
    , plutus-context-builder ^>= 2.0
    , plutus-contract
    , plutus-golden       >=1.0 && <3.1
    , plutus-laws         >=1.0 && <3.1
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-numeric
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck          ^>=2.14.2
    , quickcheck-instances ^>=0.3.25
    , quickcheck-plutus-instances
    , semigroupoids       ^>=5.3
    , tasty               ^>=1.4.1
    , tasty-plutus        ^>=9.1
    , tasty-quickcheck    ^>=0.10.1.2
    , text

  hs-source-dirs: test
